--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,11 @@
 *.zip
 *.tar.gz
 *.rar
+*.json
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
 .idea
 chromedriver.exe
+depositphotos_94315204-stock-photo-yellow-lamborghini-on-white.jpg
+ghibli_2.jpg.jpg
